--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 	</header>
 
 	    <article>
-           <main class="main-section">
-               <div class="center">
-                    <div class="top-wrap">
+           <main class="my-main">
+               <div class="emtsa">
+                    <div class="obolochka">
                         <h2><b>Free</b> Your Markets From<br> IT <b>Complexity</b></h2>
                         <p>Comverse Policy Studio</p>
                         <p><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
                     </div>
-                    <a href="" class="btn">LEARN MORE</a>
+                    <a href="" class="knopka">LEARN MORE</a>
                     <ul class="slide-cont">
                         <li class="slide-btn first"><a class="slide-num">1</a></li>
                         <li class="slide-btn"><a class="slide-num">2</a></li>
@@ -53,7 +53,7 @@
                         <li class="slide-btn"><a class="slide-num">4</a></li>
                     </ul>
 
-                    <ul class="sticker-list center">
+                    <ul class="sticker-list emtsa">
                         <li class="sticker pinkBg">
                             <p>Comverse Is Value-Added Service Global Market Leader.</p>
                             <a href="">Read more</a>
