--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
                         <p><strong>1st</strong> Ever Marketing-Oriented Policy Tool</p>
                     </div>
                     <a href="" class="knopka">LEARN MORE</a>
-                    <ul class="slide-cont">
-                        <li class="slide-btn first"><a class="slide-num">1</a></li>
-                        <li class="slide-btn"><a class="slide-num">2</a></li>
-                        <li class="slide-btn"><a class="slide-num">3</a></li>
-                        <li class="slide-btn"><a class="slide-num">4</a></li>
+                    <ul class="skolzit">
+                        <li class="skolzit-k first"><a class="skolzit-n">1</a></li>
+                        <li class="skolzit-k"><a class="skolzit-n">2</a></li>
+                        <li class="skolzit-k"><a class="skolzit-n">3</a></li>
+                        <li class="skolzit-k"><a class="skolzit-n">4</a></li>
                     </ul>
 
-                    <ul class="sticker-list emtsa">
-                        <li class="sticker pinkBg">
+                    <ul class="list-parts emtsa">
+                        <li class="part pink">
                             <p>Comverse Is Value-Added Service Global Market Leader.</p>
                             <a href="">Read more</a>
                         </li>
-                        <li class="sticker greenBg">
+                        <li class="part green">
                             <p>Managed Services World Congress September 18-19 Berlin, Germany</p>
                             <a href="">Read More</a>
                         </li>
-                        <li class="sticker orangeBg">
+                        <li class="part orange">
                             <p>Comverse: Enabling a world of Connected Possibilities</p>
                             <a href="">Watch Now</a>
                         </li>
