--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 </head>
 <body>
 	<header>
-		
-
-
 		<ul id="nav-list">
 			<img id="comverse" src="./source/img/comverse-logo-medium.png" alt="Comverse logo">
 			<li><a href="">YOUR NEEDS</a></li><img src="./source/img/divider.png">		
 			<li><a href="">OUR PORTFOLIO</a></li><img src="./source/img/divider.png">
 			<li><a href="">NEWS &amp; MEDIA</a></li><img src="./source/img/divider.png">
-			<li><a href="">ABOUT Katy</a></li>
+			<li><a href="">ABOUT COMVERSE</a></li>
 			<li>
 				<div class="inline">
 					<p class="lang">
@@ -39,7 +36,7 @@
 
 	    <article>
            <main class="my-main">
-               <div class="emtsa">
+               <div class="emsta">
                     <div class="obolochka">
                         <h2><b>Free</b> Your Markets From<br> IT <b>Complexity</b></h2>
                         <p>Comverse Policy Studio</p>
@@ -69,6 +66,48 @@
                     </ul>
                 </div>
             </main>
+            <section class="we-do">
+            	<h2 class="center">WHAT CAN WE DO FOR YOU?	</h2>
+            	<ul class="center">
+                    <li>
+                        <a href="">
+                            <p class="data-monit center"></p>
+                        	Data monetization
+                        </a>              	
+                    </li>
+                    <li>
+                        <a href="">
+                            <p class="robot center"></p>
+                        	<span>Machine to machine</span><span>(M2M)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p class="flag center"></p>
+                        	<span>Over-the-top</span><span>(OTT)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p class="cloud center"></p>
+                        	Cloud computing
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p class="manage center"></p>
+                        	Managed services
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p class="social center"></p>
+                        	Social media
+                        </a>
+                    </li>
+                </ul>
+                <a href="" class="knopka center">See all of our solutions</a>
+            </section>
          <article>
 </body>
 </html> 
