--- a/index.html
+++ b/index.html
@@ -69,37 +69,37 @@
             <section class="we-do">
             	<h2 class="center">WHAT CAN WE DO FOR YOU?	</h2>
             	<ul class="center">
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="data-monit center"></p>
                         	Data monetization
                         </a>              	
                     </li>
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="robot center"></p>
                         	<span>Machine to machine</span><span>(M2M)</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="flag center"></p>
                         	<span>Over-the-top</span><span>(OTT)</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="cloud center"></p>
                         	Cloud computing
                         </a>
                     </li>
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="manage center"></p>
                         	Managed services
                         </a>
                     </li>
-                    <li>
+                    <li class="box">
                         <a href="">
                             <p class="social center"></p>
                         	Social media
