new and events part basic

--- a/index.html
+++ b/index.html
@@ -108,6 +108,73 @@
                 </ul>
                 <a href="" class="knopka center">See all of our solutions</a>
             </section>
+
+    <section class="news-events">
+        <div class="content-wrapper">
+            <h2 class="section-header">What's happening at comverse?</h1>
+
+            <div class="news">
+                NEWS
+                <ul class="no-style-list">
+                    <li class="news-item">
+                        <div class="news-item-details">
+                            <div class="date">
+                                <div class="day">04</div>
+                                <div class="month">Sep</div>
+                            </div>
+                            
+                                Comverse regains lead in convergent charging market regains lead in
+                            
+                        </div>
+                        <div>
+                            <ul class="no-style-list paper">
+                                <li>All news</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="events">
+                EVENTS
+                <ul class="no-style-list">
+                    <li class="events-item">
+                        <div class="events-item-details">
+                            <div class="date">
+                                <div class="day">04</div>
+                                <div class="month">Sep</div>
+                            </div>
+                            <p>
+                                Comverse regains lead in convergent charging market regains lead in
+                            </p>
+                        </div>
+                        <div>
+                            <ul class="no-style-list calendar">
+                                <li>All events</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="events-item no-margin">
+                        <div class="events-item-details">
+                            <div class="date">
+                                <div class="day">04</div>
+                                <div class="month">Sep</div>
+                            </div>
+                            <p>
+                                Comverse regains lead in convergent charging market regains lead in
+                            </p>
+                        </div>
+                        <div>
+                            <ul class="no-style-list calendar">
+                                <li>All events</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
          <article>
 </body>
 </html> 
