--- a/index.html
+++ b/index.html
@@ -109,37 +109,29 @@
                 <a href="" class="knopka center">See all of our solutions</a>
             </section>
 
-    <section class="news-events">
-        <div class="content-wrapper">
-            <h2 class="section-header">What's happening at comverse?</h1>
-
-            <div class="news">
-                NEWS
-                <ul class="no-style-list">
-                    <li class="news-item">
-                        <div class="news-item-details">
+    <section class="newsAndEvents">
+        <div class>
+            <h2 class="newsHeader center">What's happening at comverse?</h2>
+            <div class="newsAndEventsContainer">
+                <ul>
+                    <li class="NewsAndEventsItem"><span class="bigFont">NEWS</span>
+                        <div class="NewsAndEventsItemDetails">
                             <div class="date">
                                 <div class="day">04</div>
                                 <div class="month">Sep</div>
                             </div>
-                            
-                                Comverse regains lead in convergent charging market regains lead in
-                            
+                            <p>
+                                 Comverse regains lead in convergent charging market regains lead in
+                            </p>
                         </div>
                         <div>
-                            <ul class="no-style-list paper">
+                            <ul class="calendar">
                                 <li>All news</li>
                             </ul>
                         </div>
                     </li>
-                </ul>
-            </div>
-
-            <div class="events">
-                EVENTS
-                <ul class="no-style-list">
-                    <li class="events-item">
-                        <div class="events-item-details">
+                    <li class="NewsAndEventsItem"><span class="bigFont">EVENTS</span>
+                        <div class="NewsAndEventsItemDetails">
                             <div class="date">
                                 <div class="day">04</div>
                                 <div class="month">Sep</div>
@@ -149,13 +141,13 @@
                             </p>
                         </div>
                         <div>
-                            <ul class="no-style-list calendar">
+                            <ul class="calendar">
                                 <li>All events</li>
                             </ul>
                         </div>
                     </li>
-                    <li class="events-item no-margin">
-                        <div class="events-item-details">
+                    <li class="NewsAndEventsItem"><span class="bigFont">PRESS RELEASES</span>
+                        <div class="NewsAndEventsItemDetails">
                             <div class="date">
                                 <div class="day">04</div>
                                 <div class="month">Sep</div>
@@ -165,7 +157,7 @@
                             </p>
                         </div>
                         <div>
-                            <ul class="no-style-list calendar">
+                            <ul class="calendar">
                                 <li>All events</li>
                             </ul>
                         </div>
